# manuscript2slides

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  TODO.md  build.py  dev-README.md  docx2slides.py  mypy.ini  nuitka-package.config.yaml  pyproject.toml  pysidedeploy.spec  pytest.ini  requirements-binary-build.txt  run_tests.sh  scratch.py
.github/workflows/: binary-release.yml  build-executables.yml  build-release.yml  test-build.yml
dev-notes/: ui_tree.txt  ui_wireframe.txt
docs/: building.md  dev-guide.md  first-launch.md  limitations.md  making-binaries.md  making-pypi-wheels.md  manual-smoke-test.md  releasing.md  repo-structure.md  troubleshooting.md  user-guide.md
resources/: blank_pptx.pptx  blank_template.pptx  sample_doc.docx
src/docx2pptx/: __main__.py  chunking.py  config.py  create_slides.py  formatting.py  io.py  pipeline_docx2pptx.py  pipeline_pptx2docx.py  populate_docx.py  run_processing.py  utils.py
src/docx2pptx/annotations/: apply_to_slides.py  extract.py  restore_from_slides.py
src/docx2pptx_text/: __main__.py  chunking.py  config.py  create_slides.py  formatting.py  io.py  models.py  pipeline_docx2pptx.py  pipeline_pptx2docx.py  populate_docx.py  run_processing.py  utils.py
src/docx2pptx_text/annotations/: apply_to_slides.py  extract.py  restore_from_slides.py
src/docx2pptx_text/internals/: constants.py  logger.py  paths.py  run_context.py  scaffold.py
src/docx2pptx_text/internals/config/: config_utils.py  define_config.py
src/docx2pptx_text/resources/: blank_template.pptx  docx_template.docx  sample_doc.docx  sample_slides_output.pptx  scaffold_README.md
src/manuscript2slides/: __init__.py  __main__.py  chunking.py  cli.py  create_slides.py  file_io.py  formatting.py  gui.py  io.py  models.py  orchestrator.py  pipeline_docx2pptx.py  pipeline_pptx2docx.py  populate_docx.py  run_processing.py  startup.py  templates.py  ui_tk.py  ui_tkinter.py  utils.py
src/manuscript2slides/annotations/: apply_to_slides.py  docx_xml.py  extract.py  restore_from_slides.py
src/manuscript2slides/archive/: ui_tk.py
src/manuscript2slides/experiments/: ui_qt.py  ui_tk_mvp.py  ui_tkinter.py
src/manuscript2slides/internals/: __init__.py  constants.py  define_config.py  logger.py  manifest.py  paths.py  run_context.py  scaffold.py
src/manuscript2slides/internals/config/: __init__.py  config_utils.py  define_config.py
src/manuscript2slides/pipelines/: docx2pptx.py  pptx2docx.py
src/manuscript2slides/processing/: chunking.py  create_slides.py  docx_xml.py  formatting.py  populate_docx.py  run_processing.py
src/manuscript2slides/resources/: _resources.md  blank_template.pptx  docx_template.docx  my_config.yaml  pptx_template.pptx  sample_config.toml  sample_demo_config.toml  sample_doc.docx  sample_slides_output.pptx  scaffold_README.md
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_correct_output.py  test_file_io.py  test_golden_baselines.py  test_gui.py  test_integration.py  test_io.py  test_main.py  test_smoke.py  test_startup.py  test_templates.py  test_utils.py
tests/annotations/: test_footnote_regression.py  test_restore_from_slides.py
tests/baselines/: docx_chunks.json  docx_formatting.json  docx_sample.json  pptx_formatting.json  pptx_sample.json
tests/data/: custom_font_output.pptx  docx_template.docx  missing_layout.pptx  pptx_20_empty_slides.pptx  pptx_template.pptx  sample_doc.docx  sample_doc_modified_fonts.docx  sample_slides_output.pptx  test_config.toml  test_formatting.docx  test_formatting_expected_output.pptx
tests/internals/: test_define_config.py  test_manifest.py  test_scaffold.py
tests/internals/config/: test_define_config.py
tests/processing/: test_chunking.py  test_exp_formatting.py  test_formatting.py
tests/tools/: __init__.py  extract_chunk_data.py  extract_docx_data.py  extract_pptx_data.py  extraction_utils.py  run_pytest_and_capture_app_logs.sh
