[project]
name = "manuscript2slides"
version = "0.0.0"
requires-python = ">=3.10"
description = "Convert Word documents to PowerPoint slides"
authors = [{ name = "talosgl" }]

dependencies = [
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "platformdirs>=3.5",
    "PySide6>=6.5.0",
    "tomli>=2.0.0; python_version < '3.11'", # Only install if Python < 3.11
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "tomli>=2.0.0",   # Always install for dev, even on 3.11+
    "tomli-w>=1.0.0",
]

[project.urls]
Repository = "https://github.com/talosgl/manuscript2slides"
Issues = "https://github.com/talosgl/manuscript2slides/issues"

# Convention is: [project] -> [tool.*] sections -> [build-system] last.
[project.scripts]
manuscript2slides = "manuscript2slides.__main__:main"


[tool.setuptools.package-data]
manuscript2slides = [
    "resources/*.pptx",
    "resources/*.docx",
    "resources/*.md",
    "resources/*.yaml",
]

[tool.ruff]
lint.select = ["D100", "D101", "D102", "D103", "ANN"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
