[project]
name = "manuscript2slides"
version = "0.1.3"
requires-python = ">=3.10"
description = "Convert Word documents to PowerPoint slides and back"
readme = "README.md"
license = "MIT"
authors = [{ name = "talosgl" }]
keywords = ["docx", "pptx", "converter", "powerpoint", "word"]

dependencies = [
    "python-docx>=1.1.0,<2.0",
    "python-pptx>=0.6.21,<1.0",
    "platformdirs>=3.5,<5.0",
    "PySide6>=6.5.0,<7.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0,<2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only", # Not compatible with Python 2
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<6.0", # Coverage reports
    "pytest-qt>=4.0.0,<5.0",  # Qt testing helpers
    "tomli>=2.0.0",           # Always install for dev
    "tomli-w>=1.0.0",
    "mypy>=1.0.0,<2.0",       # Type checking
    "ruff>=0.1.0,<1.0",       # Linting and formatting
]

[project.urls]
Homepage = "https://github.com/talosgl/manuscript2slides"
Repository = "https://github.com/talosgl/manuscript2slides"
Issues = "https://github.com/talosgl/manuscript2slides/issues"
Documentation = "https://github.com/talosgl/manuscript2slides/tree/main/docs"

# Convention is: [project] -> [tool.*] sections -> [build-system] last.
[project.scripts]
manuscript2slides = "manuscript2slides.gui:main"
manuscript2slides-cli = "manuscript2slides.cli:main"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["manuscript2slides.archive*"]

[tool.setuptools.package-data]
manuscript2slides = [
    "resources/*.pptx",
    "resources/*.docx",
    "resources/*.md",
    "resources/*.yaml",
]

[tool.ruff]
# Linting rules
lint.select = ["D100", "D101", "D102", "D103", "ANN"]

# General settings
line-length = 88
target-version = "py310"

# Exclude directories
extend-exclude = [".eggs", ".git", ".venv", "build", "dist"]

[tool.ruff.format]
# Formatting settings (Black-compatible)
quote-style = "double" # Enforce double quotes consistently

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
